@@ -78,7 +78,6 @@ public:
 	// Contructors
 	/////////////////////////////////////////////////////////////////////////////////////
 	MFRC522Extended() : MFRC522() {};
-	MFRC522Extended(uint8_t rst) : MFRC522(rst) {};
 	MFRC522Extended(uint8_t ss, uint8_t rst) : MFRC522(ss, rst) {};
 	
 	/////////////////////////////////////////////////////////////////////////////////////
