@@ -1,7 +1,11 @@
 -- Add changes to unreleased tag until we make a release.
 
 unreleased
--
+- Removed: void PCD_Init(byte resetPowerDownPin);
+- Removed: MFRC522(byte resetPowerDownPin);
+- Changed default initialisation of SS pin with constants of arduino.h are not done anymore
+- Replaced UINT8_MAX by UNUSED_PIN
+- 
 
 22 Mar 2017, v1.3.6
 - Added deprecate and compiler warnings @Rotzbua
